refactor(file) : file 다운로드를 위한 메소드 변경