@@ -4,7 +4,6 @@ import static org.springframework.security.config.Customizer.withDefaults;
 
 import com.soulware.backend.global.filter.JwtFilter;
 import com.soulware.backend.global.util.JwtUtil;
-import java.util.Arrays;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
@@ -52,13 +51,15 @@ public class AuthenticationConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(List.of("http://localhost:3000"));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
-        configuration.setAllowedHeaders(List.of("Authorization", "content-type", "x-auth-token"));
+        configuration.setAllowedHeaders(
+            List.of("Authorization", "content-type", "x-auth-token", "Content-Disposition")
+        );
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
-        configuration.setExposedHeaders(Arrays.asList(
-            "Access-Control-Allow-Headers",
-            "Authorization", "x-xsrf-token", "Access-Control-Allow-Headers", "Origin", "Accept",
-            "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers"
+        configuration.setExposedHeaders(List.of(
+            "Access-Control-Allow-Headers", "Authorization", "x-xsrf-token",
+            "Access-Control-Allow-Headers", "Origin", "Accept", "X-Requested-With", "Content-Type",
+            "Access-Control-Request-Method", "Access-Control-Request-Headers", "Content-Disposition"
         ));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
